--- a/boot/zephyr/prj.conf
+++ b/boot/zephyr/prj.conf
@@ -31,6 +31,16 @@ CONFIG_FPROTECT=y
 CONFIG_LOG=y
 CONFIG_LOG_MODE_MINIMAL=y # former CONFIG_MODE_MINIMAL
 ### Ensure Zephyr logging changes don't use more resources
-CONFIG_LOG_DEFAULT_LEVEL=0
+CONFIG_LOG_DEFAULT_LEVEL=3
 ### Decrease footprint by ~4 KB in comparison to CBPRINTF_COMPLETE=y
 CONFIG_CBPRINTF_NANO=y
+
+### SPI SDHC drivers rely on multithreading
+CONFIG_MULTITHREADING=y
+CONFIG_MCUBOOT_SD_UPDATE=y
+
+CONFIG_SPI=y
+#CONFIG_SPI_4=y
+CONFIG_SPI_NRFX_RAM_BUFFER_SIZE=8
+#CONFIG_NRFX_SPIM4=y
+CONFIG_SDMMC_OVER_SPI=y
