[mcuboot] add delta dfu feature
delta dfu bootloader based on NCS2.6.0-rc2 test successfully
fix the bug that CFI check will fail causing a panic if FIH ENABLE
Create README.rst
mcuboot supports external flash
update mcuboot to 78bc87c4 commit
Do not build static library for delta dfu

Signed-off-by: Noy Luo <noy.luo@nordicsemi.no>
Signed-off-by: Pirun Lee <pirun.lee@nordicsemi.no>

--- a/boot/zephyr/CMakeLists.txt
+++ b/boot/zephyr/CMakeLists.txt
@@ -1,7 +1,6 @@
 # CMakeLists.txt for building mcuboot as a Zephyr project
 #
 # Copyright (c) 2017 Open Source Foundries Limited
-# Copyright (c) 2023 Nordic Semiconductor ASA
 #
 # SPDX-License-Identifier: Apache-2.0
 
@@ -54,7 +53,6 @@ endif()
 # Zephyr port-specific sources.
 zephyr_library_sources(
   main.c
-  io.c
   flash_map_extended.c
   os.c
   keys.c
@@ -127,11 +125,6 @@ endif()
 if(CONFIG_SINGLE_APPLICATION_SLOT)
 zephyr_library_sources(
   ${BOOT_DIR}/zephyr/single_loader.c
-  )
-zephyr_library_include_directories(${BOOT_DIR}/bootutil/src)
-elseif(CONFIG_BOOT_FIRMWARE_LOADER)
-zephyr_library_sources(
-  ${BOOT_DIR}/zephyr/firmware_loader.c
   )
 zephyr_library_include_directories(${BOOT_DIR}/bootutil/src)
 else()
@@ -364,167 +357,89 @@ zephyr_library_sources(
 )
 endif()
 
-if(SYSBUILD)
-  function(align_up num align result)
-    math(EXPR out "(((${num}) + ((${align}) - 1)) & ~((${align}) - 1))")
-    set(${result} "${out}" PARENT_SCOPE)
-  endfunction()
-
-  function(dt_get_parent node)
-    string(FIND "${${node}}" "/" pos REVERSE)
-
-    if(pos EQUAL -1)
-      message(ERROR "Unable to get parent of node: ${${node}}")
-    endif()
-
-    string(SUBSTRING "${${node}}" 0 ${pos} ${node})
-    set(${node} "${${node}}" PARENT_SCOPE)
-  endfunction()
-
-  if(CONFIG_SINGLE_APPLICATION_SLOT OR CONFIG_BOOT_FIRMWARE_LOADER OR CONFIG_BOOT_SWAP_USING_SCRATCH OR CONFIG_BOOT_SWAP_USING_MOVE OR CONFIG_BOOT_UPGRADE_ONLY OR CONFIG_BOOT_DIRECT_XIP OR CONFIG_BOOT_RAM_LOAD)
-    # TODO: RAM LOAD support
-    dt_nodelabel(slot0_flash NODELABEL "slot0_partition")
-    dt_get_parent(slot0_flash)
-    dt_get_parent(slot0_flash)
-
-    if(NOT CONFIG_SINGLE_APPLICATION_SLOT)
-      dt_nodelabel(slot1_flash NODELABEL "slot1_partition")
-      dt_get_parent(slot1_flash)
-      dt_get_parent(slot1_flash)
-
-      if(NOT "${slot0_flash}" STREQUAL "${slot1_flash}")
-        # Check both slots for the one with the largest write/erase block size
-        dt_prop(erase_size_slot0 PATH "${slot0_flash}" PROPERTY "erase-block-size")
-        dt_prop(write_size_slot0 PATH "${slot0_flash}" PROPERTY "write-block-size")
-        dt_prop(erase_size_slot1 PATH "${slot1_flash}" PROPERTY "erase-block-size")
-        dt_prop(write_size_slot1 PATH "${slot1_flash}" PROPERTY "write-block-size")
-
-        if(DEFINED erase_size_slot0 AND DEFINED erase_size_slot1)
-          if(${erase_size_slot0} GREATER ${erase_size_slot1})
-            set(erase_size ${erase_size_slot0})
-          else()
-            set(erase_size ${erase_size_slot1})
-          endif()
-        elseif(DEFINED erase_size_slot0)
-          set(erase_size ${erase_size_slot0})
-        elseif(DEFINED erase_size_slot1)
-          set(erase_size ${erase_size_slot1})
-        endif()
-
-        if(DEFINED write_size_slot0 AND DEFINED write_size_slot1)
-          if(${write_size_slot0} GREATER ${write_size_slot1})
-            set(write_size ${write_size_slot0})
-          else()
-            set(write_size ${write_size_slot1})
-          endif()
-        elseif(DEFINED write_size_slot0)
-          set(write_size ${write_size_slot0})
-        elseif(DEFINED write_size_slot1)
-          set(write_size ${write_size_slot1})
-        endif()
-      else()
-        dt_prop(erase_size PATH "${slot0_flash}" PROPERTY "erase-block-size")
-        dt_prop(write_size PATH "${slot0_flash}" PROPERTY "write-block-size")
-      endif()
-    else()
-      dt_prop(erase_size PATH "${slot0_flash}" PROPERTY "erase-block-size")
-      dt_prop(write_size PATH "${slot0_flash}" PROPERTY "write-block-size")
-    endif()
-
-    if(NOT DEFINED erase_size)
-      message(WARNING "Unable to determine erase size of slot0 or slot1 partition, setting to 1 (this is probably wrong)")
-      set(erase_size 1)
-    endif()
-
-    if(NOT DEFINED write_size)
-      message(WARNING "Unable to determine write size of slot0 or slot1 partition, setting to 8 (this is probably wrong)")
-      set(write_size 8)
-    elseif(write_size LESS 8)
-      set(write_size 8)
-    endif()
-
-    set(key_size 0)
-
-    # Boot trailer magic size
-    set(boot_magic_size 16)
-
-    # Estimates for trailer TLV data size, this was taken from hello world builds for nrf52840dk
-    if(CONFIG_BOOT_SIGNATURE_TYPE_RSA)
-      if(CONFIG_BOOT_SIGNATURE_TYPE_RSA_LEN EQUAL 3072)
-        set(boot_tlv_estimate 464)
-      else()
-        set(boot_tlv_estimate 336)
-      endif()
-    elseif(CONFIG_BOOT_SIGNATURE_TYPE_ECDSA_P256)
-      set(boot_tlv_estimate 150)
-    elseif(CONFIG_BOOT_SIGNATURE_TYPE_ED25519)
-      set(boot_tlv_estimate 144)
-    else()
-      set(boot_tlv_estimate 40)
-    endif()
-
-    if(CONFIG_BOOT_ENCRYPT_RSA OR CONFIG_BOOT_ENCRYPT_EC256 OR CONFIG_BOOT_ENCRYPT_X25519)
-      # 128-bit AES key size
-      set(boot_enc_key_size 16)
-
-      if(CONFIG_BOOT_SWAP_SAVE_ENCTLV)
-        if(CONFIG_BOOT_ENCRYPT_RSA)
-          set(key_size 256)
-        elseif(CONFIG_BOOT_ENCRYPT_EC256)
-          math(EXPR key_size "65 + 32 + ${boot_enc_key_size}")
-        elseif(CONFIG_BOOT_ENCRYPT_X25519)
-          math(EXPR key_size "32 + 32 + ${boot_enc_key_size}")
-        endif()
-      else()
-        set(key_size "${boot_enc_key_size}")
-      endif()
-
-      align_up(${key_size} ${write_size} key_size)
-      math(EXPR key_size "${key_size} * 2")
-    endif()
-
-    align_up(${boot_magic_size} ${write_size} boot_magic_size)
-
-    if(CONFIG_SINGLE_APPLICATION_SLOT OR CONFIG_BOOT_FIRMWARE_LOADER)
-      set(boot_swap_data_size 0)
-    else()
-      math(EXPR boot_swap_data_size "${write_size} * 4")
-    endif()
-
-    if(CONFIG_BOOT_SWAP_USING_SCRATCH OR CONFIG_BOOT_SWAP_USING_MOVE)
-      math(EXPR boot_status_data_size "${CONFIG_BOOT_MAX_IMG_SECTORS} * (3 * ${write_size})")
-    else()
-      set(boot_status_data_size 0)
-    endif()
-
-    math(EXPR required_size "${key_size} + ${boot_magic_size} + ${boot_swap_data_size} + ${boot_status_data_size} + ${boot_tlv_estimate}")
-    align_up(${required_size} ${erase_size} required_size)
-
-    if(CONFIG_SINGLE_APPLICATION_SLOT OR CONFIG_BOOT_FIRMWARE_LOADER)
-      set(required_upgrade_size "0")
-    else()
-      math(EXPR required_upgrade_size "${boot_magic_size} + ${boot_swap_data_size} + ${boot_status_data_size}")
-      align_up(${required_upgrade_size} ${erase_size} required_upgrade_size)
-    endif()
-
-    if(CONFIG_BOOT_SWAP_USING_MOVE)
-      math(EXPR required_size "${required_size} + ${erase_size}")
-      math(EXPR required_upgrade_size "${required_upgrade_size} + ${erase_size}")
-    endif()
-  else()
-    set(required_size 0)
-    set(required_upgrade_size 0)
-  endif()
-
-  set(mcuboot_image_footer_size ${required_size} CACHE INTERNAL "Estimated MCUboot image trailer size" FORCE)
-  set(mcuboot_image_upgrade_footer_size ${required_upgrade_size} CACHE INTERNAL "Estimated MCUboot update image trailer size" FORCE)
-endif()
-
 if(CONFIG_MCUBOOT_NRF_CLEANUP_PERIPHERAL OR CONFIG_MCUBOOT_CLEANUP_NONSECURE_RAM)
 zephyr_library_sources(
   ${BOOT_DIR}/zephyr/nrf_cleanup.c
 )
 endif()
+
+
+# support application delta dfu
+if(DEFINED CONFIG_BOOT_UPGRADE_APP_DELTA)
+    zephyr_library_sources(
+    delta_dfu_lib/src/detools.c
+    delta_dfu_lib/src/heatshrink_decoder.c
+    delta_dfu_lib/src/delta.c
+)
+endif()
+
+
+# else() 
+# # support application delta dfu static library
+#   # The external static library that we are linking with does not know
+#   # how to build for this platform so we export all the flags used in
+#   # this zephyr build to the external build system.
+#   #
+#   # Other external build systems may be self-contained enough that they
+#   # do not need any build information from zephyr. Or they may be
+#   # incompatible with certain zephyr options and need them to be
+#   # filtered out.
+#   zephyr_get_include_directories_for_lang_as_string(       C includes)
+#   zephyr_get_system_include_directories_for_lang_as_string(C system_includes)
+#   zephyr_get_compile_definitions_for_lang_as_string(       C definitions)
+#   zephyr_get_compile_options_for_lang_as_string(           C options)
+
+#   set(external_project_cflags
+#   "${includes} ${definitions} ${options} ${system_includes}"
+#   )
+
+#   include(ExternalProject)
+
+#   # Add an external project to be able download and build the third
+#   # party library. In this case downloading is not necessary as it has
+#   # been committed to the repository.
+#   set(deltalib_dir  ${BOOT_DIR}/zephyr/delta_dfu_lib)
+#   set(deltalib_build_dir ${deltalib_dir}/build)
+
+
+#   set(DELTALIB_LIB_DIR     ${deltalib_build_dir}/lib)
+#   set(DELTALIB_INCLUDE_DIR ${deltalib_dir}/include)
+
+#   if(CMAKE_GENERATOR STREQUAL "Unix Makefiles")
+#   # https://www.gnu.org/software/make/manual/html_node/MAKE-Variable.html
+#   set(submake "$(MAKE)")
+#   else() # Obviously no MAKEFLAGS. Let's hope a "make" can be found somewhere.
+#   set(submake "make")
+#   endif()
+
+#   ExternalProject_Add(
+#     delta_dfu                 # Name for custom target
+#     PREFIX     ${deltalib_build_dir} # Root dir for entire project
+#     SOURCE_DIR ${deltalib_dir}
+#     BINARY_DIR ${deltalib_dir} # This particular build system is invoked from the root
+#     CONFIGURE_COMMAND ""    # Skip configuring the project, e.g. with autoconf
+#     BUILD_COMMAND
+#     ${submake}
+#     PREFIX=${deltalib_build_dir}
+#     CC=${CMAKE_C_COMPILER}
+#     AR=${CMAKE_AR}
+#     CFLAGS=${external_project_cflags}
+#     INSTALL_COMMAND ""      # This particular build system has no install command
+#     BUILD_BYPRODUCTS ${DELTALIB_LIB_DIR}/delta_lib.a
+#   )
+
+#   # Create a wrapper CMake library that our app can link with
+#   add_library(delta_lib STATIC IMPORTED GLOBAL)
+#   add_dependencies(
+#     delta_lib
+#     delta_dfu
+#     )
+#   set_target_properties(delta_lib PROPERTIES IMPORTED_LOCATION             ${DELTALIB_LIB_DIR}/delta_lib.a)
+#   set_target_properties(delta_lib PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${DELTALIB_INCLUDE_DIR})
+
+#   target_link_libraries(app PUBLIC delta_lib)
+
+# endif()
 
 if(SYSBUILD AND CONFIG_PCD_APP)
     # Sysbuild requires details of the RAM flash device are stored to the cache of MCUboot so
